--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
   "name": "astraller/yii2-mongodb-embedded",
+  "description": "Yii2 extension to work with embedded documents in MongoDB.",
   "type": "yii2-extension",
+  "license": "MIT",
   "minimum-stability": "stable",
   "autoload": {
     "psr-4": {
